# liberland-soil

./: LICENSE  README.md  docker-compose.yml  soilSpec.json  soilSpecRaw.json
.devcontainer/: devcontainer.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  lib.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: impls.rs  lib.rs
