[package]
name = "liberland"
version = "0.1.0-dev"
description = "Liberland Soil Chain"
authors = ["Liberland <https://github.com/liberland>"]
homepage = "https://liberland.network"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/hashed-io/liberland-soil"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "liberland"

[dependencies]
structopt = "0.3.25"
clap = { version = "3.0", features = ["derive"] }
futures = { version = '0.3.9', features = ['compat'] }
hex-literal = '0.3.1'

sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" , features = ["wasmtime"] }
sp-core = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" , features = ["wasmtime"]  }
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" , features = ["wasmtime"]  }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-chain-spec = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sp-consensus-babe = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-finality-grandpa = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sp-finality-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sp-runtime = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
# These dependencies are used for the node template's RPCs
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-sync-state-rpc = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-consensus-slots = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-consensus-uncles = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
# pallet-contracts-rpc = { version = "4.0.0-dev",  git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
# pallet-asset-tx-payment = { version = "4.0.0-dev",  git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }

frame-system = { version = "4.0.0-dev",  git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sp-transaction-storage-proof = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sp-authorship = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
pallet-mmr-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }

jsonrpc-core = "18.0.0"
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-consensus-babe-rpc = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-consensus-babe = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-consensus-epochs = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-finality-grandpa-rpc = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sp-keystore = {version = "0.11.0", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sc-network = {version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
# pallet-mmr-rpc = {version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
sp-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }
pallet-im-online = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sp-authority-discovery = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sc-authority-discovery = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }

# Local Dependencies
liberland-runtime = { version = "0.1.0-dev", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"  }

[features]
default = []
runtime-benchmarks = [
	"liberland-runtime/runtime-benchmarks",
]
